--- a/package.json
+++ b/package.json
@@ -47,13 +47,18 @@
     ]
   },
   "devDependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
     "eslint": "^7.11.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "modern-normalize": "^1.1.0",
     "prettier": "^2.5.1",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^8.1.0"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
