--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.7",
     "eslint": "^7.11.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
