--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-08-phonebook",
+  "name": "phonebook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,7 +26,7 @@
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "predeploy": "npm run build",
-    "deploy": "netlify deploy -p --httpProxy=http://195.230.131.201:3128"
+    "deploy": "netlify deploy"
   },
   "eslintConfig": {
     "extends": [
